--- a/work.html
+++ b/work.html
@@ -1,65 +1,90 @@
-<!DOCTYPE html>
 <html lang="en">
 
-  <head>
-      <meta charset=utf-8>
-      <link rel="stylesheet" href="css/bootstrap.min.css">
-      <link rel="stylesheet" href="css/bootstrap-theme.min.css">
-      <link rel="stylesheet" href="css/style.css">
-      <script type="text/javascript" src="lib/jquery-3.1.1.min.js"></script>
-      <script type="text/javascript" src="js/bootstrap.min.js"></script>
-  </head>
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="icon" href="img/favicon.ico">
+        <title>Shelley Witte</title>
 
-  <body>
-      <!-- navbar starts here -->
-      <nav class="navbar navbar-default navbar-fixed-top">
-          <div class="container-fluid">
-              <div class="navbar-header">
-                  <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNav">
-                        <span class="sr-only">Toggle navigation</span>
-                        <span class="glyphicon glyphicon-menu-hamburger"></span>
-                        <span class="menu">Menu</span>
-                  </button>
-                  <a class="navbar-brand" href="index.html">Shelley Witte</a>
-              </div>
-              <div id="myNav" class="collapse navbar-collapse">
-                  <ul class="nav navbar-nav navbar-right">
-                      <li><a href="about.html">About
-                          <span class="sr-only"></span>
-                      </a></li>
-                      <li class="active dropdown">
-                          <a href="work.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Work <span class="caret"></span></a>
-                          <ul class="dropdown-menu">
-                              <li><a href="work.html">Cartography</a></li>
-                              <li><a href="work.html">GIS</a></li>
-                              <li><a href="work.html">Education</a></li>
-                          </ul>
-                      </li>
-                      <li><a href="contact.html">Contact</a></li>
-                  </ul>
-              </div>
-          </div>
-      </nav>
+        <meta charset=utf-8>
+        <link rel="stylesheet" href="css/bootstrap.min.css">
+        <link rel="stylesheet" href="css/bootstrap-theme.min.css">
+        <link rel="stylesheet" href="css/style.css">
+        <script type="text/javascript" src="lib/jquery-3.1.1.min.js"></script>
+        <script type="text/javascript" src="js/bootstrap.min.js"></script>
+    </head>
+
+    <body>
+        <!-- navbar starts here -->
+        <header>
+            <nav class="navbar site-nav navbar-default navbar-fixed-top main-navbar site-header">
+                <div class="container">
+                    <div class="navbar-header">
+                        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNav" aria-expanded="false" aria-controls="navbar">
+                              <span class="sr-only">Toggle navigation</span>
+                              <span class="glyphicon glyphicon-menu-hamburger"></span>
+                              <span class="menu">Menu</span>
+                        </button>
+                        <a class="navbar-brand" href="index.html"> <img src="img/witte_brand.png" alt="brand" style="float: left; margin-top: -1.5%"></a>
+                    </div>
+                    <div id="myNav" class="navbar-collapse collapse ">
+                        <ul class="nav navbar-nav navbar-right">
+                            <li><a href="Shelley_Witte_resume_2016.pdf" target="_blank">Resume<span class="sr-only"></span></a></li>
+                            <li><a class="current-page" href="work.html">Work</a></li>
+                            <li><a href="contact.html">Contact</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </nav>
+            <script type="text/javascript" src="lib/jquery-3.1.1.min.js"></script>
+            <script type="text/javascript" src="js/bootstrap.min.js"></script>
+        </header>
+
+        <div class="container">
+			<div class="row header">
+				<div class="col-md-12">
+					<h1>Portfolio</h1>
+                    <h3>My collection of work from cartography and GIS coursework at the University of Wisconsin-Madison.</h3>
+				</div>
+			</div>
+		</div>
 
 
 <!-- thumbnails start here -->
-        <div class="container">
-            <div class="row">
-                <div class="col-md-4 col-sm-6 col-xs-12 port-thumb" >
-                    <a href="project1.html" target="_blank">
-                        <img src="img/blah.jpg" class="img-responsive center-block"/>
-                    </a>
-                    <p> Project 1 is a blah. </p>
-                </div>
+        <div class="page-content">
+            <div class="wrapper">
+                <div class="container" style="width:auto;">
+                    <div class="row">
+                        <div class="col-md-4 col-sm-6 col-xs-12 port-thumb">
+                            <div class="portfolio-thumbnail">
+                                <a href="unintended_pregnancies.html">
+                                    <figure class="img-hover">
+                                        <img class="img-hover" src="img/pregnancy_crop.png" alt="" class="img-responsive"/></figure></a>
+                            </div>
+                        </div>
 
-                <div class="col-md-4 col-sm-6 col-xs-12 port-thumb">
-                    <img src="img/blah.jpg" class="img-responsive center-block"/>
-                    <p> Project 2 is a blah. </p>
-                </div>
+                        <div class="col-md-4 col-sm-6 col-xs-12 port-thumb">
+                            <div class="portfolio-thumbnail">
+                                <a href="terrain_map.html">
+                                    <figure class="img-hover">
+                                        <img class="img-hover" src="img/terrain_crop.png" alt="" class="img-responsive"/></figure></a>
+                            </div>
+                        </div>
 
-                <div class="col-md-4 col-sm-6 col-xs-12 port-thumb">
-                    <img src="img/blah.jpg" class="img-responsive center-block"/>
-                    <p> Project 3 is a blah. </p>
+                        <div class="col-md-4 col-sm-6 col-xs-12 port-thumb">
+                            <div class="portfolio-thumbnail">
+                                <a href="unintended_pregnancies.html">
+                                    <figure class="img-hover">
+                                        <img class="img-hover" src="img/pregnancy_crop.png" alt="" class="img-responsive"/></figure></a>
+                            </div>
+                        </div>
+
+                    </div>
                 </div>
             </div>
         </div>
+
+  </body>
+
+</html>
