--- a/work.html
+++ b/work.html
@@ -56,7 +56,7 @@
             <div class="wrapper">
                 <div class="container" style="width:auto;">
                     <div class="row">
-                        <div class="col-md-4 col-sm-6 col-xs-12 port-thumb">
+                        <div class="col-md-4 col-sm-6 col-xs-12">
                             <div class="portfolio-thumbnail">
                                 <a href="unintended_pregnancies.html">
                                     <figure class="img-hover">
@@ -64,7 +64,7 @@
                             </div>
                         </div>
 
-                        <div class="col-md-4 col-sm-6 col-xs-12 port-thumb">
+                        <div class="col-md-4 col-sm-6 col-xs-12">
                             <div class="portfolio-thumbnail">
                                 <a href="terrain_map.html">
                                     <figure class="img-hover">
@@ -72,11 +72,11 @@
                             </div>
                         </div>
 
-                        <div class="col-md-4 col-sm-6 col-xs-12 port-thumb">
+                        <div class="col-md-4 col-sm-6 col-xs-12">
                             <div class="portfolio-thumbnail">
-                                <a href="unintended_pregnancies.html">
+                                <a href="maptiles.html">
                                     <figure class="img-hover">
-                                        <img class="img-hover" src="img/pregnancy_crop.png" alt="" class="img-responsive"/></figure></a>
+                                        <img class="img-hover" src="img/maptiles.png" alt="" class="img-responsive"/></figure></a>
                             </div>
                         </div>
 
