contact links working!

--- a/contact.html
+++ b/contact.html
@@ -69,9 +69,9 @@
               		c-11,0-20-9-20-20v-66c0-11-6.1-26.6-13.7-34.6l-99-105.8c-7.5-8-19.9-14.2-27.6-13.6S59.7,88.1,54.5,84S45,76.5,45,76.5"/>
               </g>
               <text transform="matrix(1 0 0 1 427 88.7162)" class="st3 st4 st5">Cross paths with me!</text>
-              <text transform="matrix(0.7071 -0.7071 0.7071 0.7071 383.9101 307.3562)" class="st3 st4 st6">@ohthatswitte</text>
-              <text transform="matrix(0.7071 -0.7071 0.7071 0.7071 263.2827 547.4684)" class="st3 st4 st6">WitteMaps</text>
-              <text transform="matrix(0.7071 -0.7071 0.7071 0.7071 73.7663 529.5037)" class="st3 st4 st6">shelleywitte@gmail.com</text>
+              <text transform="matrix(0.7071 -0.7071 0.7071 0.7071 383.9101 307.3562)" class="st3 st4 st6"><a xlink:href="http://twitter.com/ohthatswitte">@ohthatswitte</a></text>
+              <text transform="matrix(0.7071 -0.7071 0.7071 0.7071 263.2827 547.4684)" class="st3 st4 st6"><a xlink:href="http://github.com/wittemaps">WitteMaps</a></text>
+              <text transform="matrix(0.7071 -0.7071 0.7071 0.7071 73.7663 529.5037)" class="st3 st4 st6"><a xlink:href="mailto:shelleywitte@gmail.com">shelleywitte@gmail.com</a></text>
               <text transform="matrix(0.7071 -0.7071 0.7071 0.7071 234.3986 398.2981)" class="st3 st4 st7">email</text>
               <text transform="matrix(0.7071 -0.7071 0.7071 0.7071 403.4824 321.5002)" class="st3 st4 st7">Twitter</text>
               <text transform="matrix(0.7071 -0.7071 0.7071 0.7071 315.0439 526.7607)" class="st3 st4 st7">Github</text>
