finished for now!
missing:  links to interactive maps, education and GIS portfolio pieces

--- a/UW_incoming.html
+++ b/UW_incoming.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 
-
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -48,11 +47,11 @@
                 <div class="container portfolio-page" style="width:auto;">
                     <div class="row">
                         <div class="col-md-12">
-                                <h1>The Walking Dead map tiles</h1>
-                                <p>One of my favorite TV shows is The Walking Dead. I this tileset to capture the aesthetic style of the show's opening credits from the yellow, dingy tint to the decay of the humans and the architecture post-zombie apocalypse. </p>
+                                <h1>UW Incoming Freshmen Home States</h1>
+                                <p>This map was my final project for my introductory cartography class in undergrad. Most of my friends came from out of state, like me (Minnesota), so I wanted to see where other UW students were coming from. I made a proportional/flow symbol map to visualize the incoming freshman class for the fall of 2006.  </p>
                                 <br>
                                 <p>
-                                    <img src="img/maptiles.gif" alt="walking dead"/>
+                                    <img src="img/incoming_full.png" alt="Incoming Freshmen"/>
                                 </p>
                                 <a href="/portfolio/">&larr; back to portfolio</a>
                         </div>
