--- a/achievementgap.html
+++ b/achievementgap.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 
-
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -48,11 +47,13 @@
                 <div class="container portfolio-page" style="width:auto;">
                     <div class="row">
                         <div class="col-md-12">
-                                <h1>The Walking Dead map tiles</h1>
-                                <p>One of my favorite TV shows is The Walking Dead. I this tileset to capture the aesthetic style of the show's opening credits from the yellow, dingy tint to the decay of the humans and the architecture post-zombie apocalypse. </p>
+                                <h1>8th Grade Science Achievement Gaps</h1>
+                                <p>Having taught science in an urban school district, I witnessed firsthand the disparity in educational performance between different socioeconomic groups. Science is such a practical discipline that helps students understand the world around them and to also think critically. Reducing disparities while lifting everyone up together is something I hope the U.S. focuses on in the coming years. </p>
+
+                                <p>This is typically an interactive map. Link to the working interactive coming soon!</p>
                                 <br>
                                 <p>
-                                    <img src="img/maptiles.gif" alt="walking dead"/>
+                                    <img src="img/achievementgap.png" alt="Achievement Gap"/>
                                 </p>
                                 <a href="/portfolio/">&larr; back to portfolio</a>
                         </div>
