--- a/campaign_finance.html
+++ b/campaign_finance.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 
-
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -48,11 +47,12 @@
                 <div class="container portfolio-page" style="width:auto;">
                     <div class="row">
                         <div class="col-md-12">
-                                <h1>The Walking Dead map tiles</h1>
-                                <p>One of my favorite TV shows is The Walking Dead. I this tileset to capture the aesthetic style of the show's opening credits from the yellow, dingy tint to the decay of the humans and the architecture post-zombie apocalypse. </p>
+                                <h1>Money in Politics</h1>
+                                <p>The 2016 Presidental Election was not normal in any sense of the word. In the spring of 2016, I worked with two fellow cartography students to map individual campaign contributions from U.S. citizens. We used d3 to map the map interactive. Users can look at the total contributions per state, per capita, and compare contributions for two candidates.  </p>
+                                <p>This is typically an interactive map. Link to the working interactive coming soon!</p>
                                 <br>
                                 <p>
-                                    <img src="img/maptiles.gif" alt="walking dead"/>
+                                    <img src="img/campaign_full.png" alt="Money"/>
                                 </p>
                                 <a href="/portfolio/">&larr; back to portfolio</a>
                         </div>
