--- a/work.html
+++ b/work.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
 
     <head>
@@ -80,10 +81,46 @@
                             </div>
                         </div>
 
+                        <div class="col-md-4 col-sm-6 col-xs-12">
+                            <div class="portfolio-thumbnail">
+                                <a href="achievementgap.html">
+                                    <figure class="img-hover">
+                                        <img class="img-hover" src="img/achievement_crop.png" alt="" class="img-responsive"/></figure></a>
+                            </div>
+                        </div>
+
+                        <div class="col-md-4 col-sm-6 col-xs-12">
+                            <div class="portfolio-thumbnail">
+                                <a href="campaign_finance.html">
+                                    <figure class="img-hover">
+                                        <img class="img-hover" src="img/campaign_crop.png" alt="" class="img-responsive"/></figure></a>
+                            </div>
+                        </div>
+
+                        <div class="col-md-4 col-sm-6 col-xs-12">
+                            <div class="portfolio-thumbnail">
+                                <a href="UW_incoming.html">
+                                    <figure class="img-hover">
+                                        <img class="img-hover" src="img/incoming_crop.png" alt="" class="img-responsive"/></figure></a>
+                            </div>
+                        </div>
+
                     </div>
                 </div>
             </div>
         </div>
+
+        <br>
+
+      <footer>
+          <div class="jumbotron footer">
+              <div class="container">
+                  <h5><b>Shelley Witte</b></h5>
+                  <h5>email:  shelleywitte@gmail.com</h5>
+                  <h5>Twitter:  <a href="https://twitter.com/ohthatswitte">@ohthatswitte</h5>
+              </div>
+          </div>
+      </footer>
 
   </body>
 
