--- a/index.html
+++ b/index.html
@@ -53,12 +53,12 @@
       <div class="container">
           <div class="row">
               <div class="col-md-4 col-sm-6 col-xs-12">
-                  <h2>Cartography</h2><img src="img/map-icon.png" class="img-responsive center-block" alt="GIS">
+                  <h2>Cartography</h2>
                   <p>As a highly visual learner and an educator, I've been facinated by a map's ability to convey a wealth of information in a concise manner. Cartographers are educators, scientists, and artists. I fully embrace the practice of weaving together science and art through geovisualization and beautiful design.</p>
                   <!-- <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p> -->
               </div>
               <div class="col-md-4 col-sm-6 col-xs-12">
-                  <h2>GIS</h2><img src="img/GIS.png">
+                  <h2>GIS</h2>
                   <p>You can't solve problems unless you are aware of and understand their history and complexities. I love how GIS can expose, evaluate, and solve complex issues. My professional goal is to help uncover social and environmental injustices and communicate them to wider audiences.  </p>
                   <!-- <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p> -->
               </div>
@@ -69,16 +69,17 @@
               </div>
           </div>
 
-          <!-- <footer class="site-footer">
-              <div class="wrapper">
-                  <div class"footer-col-wrapper">
-                          <img class="img-responsive" src="img/contact_footer.png" alt="metro">
-                      </div>
-                  </div>
-              </div>
-          </footer> -->
+          <br>
 
-
+    <footer>
+        <div class="jumbotron footer">
+            <div class="container">
+                <h5><b>Shelley Witte</b></h5>
+                <h5>email:  shelleywitte@gmail.com</h5>
+    		    <h5>Twitter:  <a href="https://twitter.com/ohthatswitte">@ohthatswitte</h5>
+            </div>
+        </div>
+    </footer>
 
   </body>
 
