--- a/UW_incoming.html
+++ b/UW_incoming.html
@@ -42,19 +42,24 @@
             <script type="text/javascript" src="js/bootstrap.min.js"></script>
         </header>
 
-        <div class="page-content">
-            <div class="wrapper">
-                <div class="container portfolio-page" style="width:auto;">
-                    <div class="row">
-                        <div class="col-md-12">
-                                <h1>UW Incoming Freshmen Home States</h1>
-                                <p>This map was my final project for my introductory cartography class in undergrad. Most of my friends came from out of state, like me (Minnesota), so I wanted to see where other UW students were coming from. I made a proportional/flow symbol map to visualize the incoming freshman class for the fall of 2006.  </p>
-                                <br>
-                                <p>
-                                    <img src="img/incoming_full.png" alt="Incoming Freshmen"/>
-                                </p>
-                                <a href="/portfolio/">&larr; back to portfolio</a>
-                        </div>
+
+        <div class="container">
+            <div class="row header">
+                <div class="col-md-12 col-xs-12">
+                        <h1 class="page-header">Home States of Incoming UW Freshmen</h1>
+                        <p>This map was my final project for my introductory cartography class in undergrad. Most of my friends came from out of state, like me (Minnesota), so I wanted to see where other UW students were coming from. I made a proportional/flow symbol map to visualize the incoming freshman class for Fall 2006. </p>
+                        <br>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-md-12 col-xs-12">
+                    <div class="thumbnail portfolio-thumbnail">
+                        <img src="img/incoming_full.png" alt="Incoming Freshmen"/>
                     </div>
                 </div>
             </div>
+            <a href="/portfolio/">&larr; back to portfolio</a>
+        </div>
+    </body>
+</html>
