--- a/campaign_finance.html
+++ b/campaign_finance.html
@@ -42,20 +42,27 @@
             <script type="text/javascript" src="js/bootstrap.min.js"></script>
         </header>
 
-        <div class="page-content">
-            <div class="wrapper">
-                <div class="container portfolio-page" style="width:auto;">
-                    <div class="row">
-                        <div class="col-md-12">
-                                <h1>Money in Politics</h1>
-                                <p>The 2016 Presidental Election was not normal in any sense of the word. In the spring of 2016, I worked with two fellow cartography students to map individual campaign contributions from U.S. citizens. We used d3 to map the map interactive. Users can look at the total contributions per state, per capita, and compare contributions for two candidates.  </p>
-                                <p>This is typically an interactive map. Link to the working interactive coming soon!</p>
-                                <br>
-                                <p>
-                                    <img src="img/campaign_full.png" alt="Money"/>
-                                </p>
-                                <a href="/portfolio/">&larr; back to portfolio</a>
-                        </div>
+
+        <div class="container">
+            <div class="row header">
+                <div class="col-md-12 col-xs-12">
+                        <h1 class="page-header">Money in Politics</h1>
+                        <p>The 2016 Presidental Election was not normal in any sense of the word. In the spring of 2016, I worked with two fellow cartography students to map individual campaign contributions from U.S. citizens. We used d3 to map the map interactive. Users can look at the total contributions per state, per capita, and compare contributions for two candidates.  </p>
+                        <p>This is typically an interactive map. Link to the working interactive coming soon!</p>
+                        <br>
+                        <p>
+
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-md-12 col-xs-12">
+                    <div class="thumbnail portfolio-thumbnail">
+                        <img src="img/campaign_full.png" alt="Money"/>
                     </div>
                 </div>
             </div>
+            <a href="/portfolio/">&larr; back to portfolio</a>
+        </div>
+    </body>
+</html>
