--- a/contact.html
+++ b/contact.html
@@ -39,9 +39,9 @@
           <script type="text/javascript" src="js/bootstrap.min.js"></script>
       </header>
 
-      <div class="page-content">
-          <div class="wrapper">
-              <!-- <img src="img/contact_footer.png"> -->
+      <div class="container";>
+          <div class="row">
+              <div class="col-md-12">
               <!-- Generator: Adobe Illustrator 20.1.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
               <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
               	 viewBox="0 0 786 600" style="enable-background:new 0 0 786 600;" xml:space="preserve">
