--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <body>
       <!-- navbar starts here -->
       <header>
-          <nav class="navbar site-nav navbar-default navbar-fixed-top main-navbar site-header">
+          <nav class="navbar site-nav navbar-default navbar-fixed-top site-header">
               <div class="container">
                   <div class="navbar-header">
                       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNav" aria-expanded="false" aria-controls="navbar">
@@ -41,8 +41,9 @@
           <script type="text/javascript" src="js/bootstrap.min.js"></script>
       </header>
 
-      <div class="container">
-          <div class= "jumbotron">
+      <div class= "jumbotron">
+          <div class="container">
+
               <h1>Shelley Witte</h1>
               <h2>Cartography  |  GIS  |  Education</h2>
               <br>
@@ -68,19 +69,20 @@
                   <!-- <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p> -->
               </div>
           </div>
+      </div>
 
           <br>
 
-    <footer>
-        <div class="jumbotron footer">
-            <div class="container">
-                <h5><b>Shelley Witte</b></h5>
-                <h5>email:  shelleywitte@gmail.com</h5>
-    		    <h5>Twitter:  <a href="https://twitter.com/ohthatswitte">@ohthatswitte</h5>
-            </div>
-        </div>
-    </footer>
+          <footer>
+              <div class="jumbotron footer">
+                  <div class="container">
+                      <h5><b>Shelley Witte</b></h5>
+                      <h5>email:  shelleywitte@gmail.com</h5>
+                      <h5>Twitter:  <a href="https://twitter.com/ohthatswitte">@ohthatswitte</h5>
+                  </div>
+              </div>
+          </footer>
 
-  </body>
+      </body>
 
-</html>
+    </html>
