--- a/unintended_pregnancies.html
+++ b/unintended_pregnancies.html
@@ -42,19 +42,23 @@
             <script type="text/javascript" src="js/bootstrap.min.js"></script>
         </header>
 
-        <div class="page-content">
-            <div class="wrapper">
-                <div class="container portfolio-page" style="width:auto;">
-                    <div class="row">
-                        <div class="col-md-12">
-                                <h1>Costs of Unintended Pregnancies</h1>
-                                <p>This infographic was made in my advanced cartography course. It gives the financial and health costs related to unintended pregnancies in the United States. </p>
-                                <br>
-                                <p>
-                                    <img src="img/pregnancy_full.png" alt="Unintended Pregnancies"/>
-                                </p>
-                                <a href="/portfolio/">&larr; back to portfolio</a>
-                        </div>
+        <div class="container">
+            <div class="row header">
+                <div class="col-md-12 col-xs-12">
+                        <h1 class="page-header">Costs of Unintended Pregnancies</h1>
+                        <p>This infographic was made in my advanced cartography course. It gives the financial and health costs related to unintended pregnancies in the United States. </p>
+
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-md-12 col-xs-12">
+                    <div class="thumbnail portfolio-thumbnail">
+                        <img src="img/pregnancy_full.png" alt="Unintended Pregnancies"/>
                     </div>
                 </div>
             </div>
+            <a href="/portfolio/">&larr; back to portfolio</a>
+        </div>
+    </body>
+</html>
