--- a/work.html
+++ b/work.html
@@ -47,68 +47,66 @@
 				<div class="col-md-12">
 					<h1>Portfolio</h1>
                     <h3>My collection of work from cartography and GIS coursework at the University of Wisconsin-Madison.</h3>
+                    <br>
 				</div>
 			</div>
 		</div>
 
 
 <!-- thumbnails start here -->
-        <div class="page-content">
-            <div class="wrapper">
-                <div class="container" style="width:auto;">
-                    <div class="row">
-                        <div class="col-md-4 col-sm-6 col-xs-12">
-                            <div class="portfolio-thumbnail">
-                                <a href="unintended_pregnancies.html">
-                                    <figure class="img-hover">
-                                        <img class="img-hover" src="img/pregnancy_crop.png" alt="" class="img-responsive"/></figure></a>
-                            </div>
-                        </div>
-
-                        <div class="col-md-4 col-sm-6 col-xs-12">
-                            <div class="portfolio-thumbnail">
-                                <a href="terrain_map.html">
-                                    <figure class="img-hover">
-                                        <img class="img-hover" src="img/terrain_crop.png" alt="" class="img-responsive"/></figure></a>
-                            </div>
-                        </div>
-
-                        <div class="col-md-4 col-sm-6 col-xs-12">
-                            <div class="portfolio-thumbnail">
-                                <a href="maptiles.html">
-                                    <figure class="img-hover">
-                                        <img class="img-hover" src="img/maptiles.png" alt="" class="img-responsive"/></figure></a>
-                            </div>
-                        </div>
-
-                        <div class="col-md-4 col-sm-6 col-xs-12">
-                            <div class="portfolio-thumbnail">
-                                <a href="achievementgap.html">
-                                    <figure class="img-hover">
-                                        <img class="img-hover" src="img/achievement_crop.png" alt="" class="img-responsive"/></figure></a>
-                            </div>
-                        </div>
-
-                        <div class="col-md-4 col-sm-6 col-xs-12">
-                            <div class="portfolio-thumbnail">
-                                <a href="campaign_finance.html">
-                                    <figure class="img-hover">
-                                        <img class="img-hover" src="img/campaign_crop.png" alt="" class="img-responsive"/></figure></a>
-                            </div>
-                        </div>
-
-                        <div class="col-md-4 col-sm-6 col-xs-12">
-                            <div class="portfolio-thumbnail">
-                                <a href="UW_incoming.html">
-                                    <figure class="img-hover">
-                                        <img class="img-hover" src="img/incoming_crop.png" alt="" class="img-responsive"/></figure></a>
-                            </div>
-                        </div>
-
+        <div class="container";>
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="portfolio-thumbnail">
+                        <a href="unintended_pregnancies.html">
+                            <figure class="img-hover">
+                                <img class="img-hover" src="img/pregnancy_crop.png" alt="" class="img-responsive"/></figure></a>
                     </div>
                 </div>
+
+                <div class="col-md-4">
+                    <div class="portfolio-thumbnail">
+                        <a href="terrain_map.html">
+                            <figure class="img-hover">
+                                <img class="img-hover" src="img/terrain_crop.png" alt="" class="img-responsive"/></figure></a>
+                    </div>
+                </div>
+
+                <div class="col-md-4">
+                    <div class="portfolio-thumbnail">
+                        <a href="maptiles.html">
+                            <figure class="img-hover">
+                                <img class="img-hover" src="img/maptiles.png" alt="" class="img-responsive"/></figure></a>
+                    </div>
+                </div>
+
+                <div class="col-md-4">
+                    <div class="portfolio-thumbnail">
+                        <a href="achievementgap.html">
+                            <figure class="img-hover">
+                                <img class="img-hover" src="img/achievement_crop.png" alt="" class="img-responsive"/></figure></a>
+                    </div>
+                </div>
+
+                <div class="col-md-4">
+                    <div class="portfolio-thumbnail">
+                        <a href="campaign_finance.html">
+                            <figure class="img-hover">
+                                <img class="img-hover" src="img/campaign_crop.png" alt="" class="img-responsive"/></figure></a>
+                    </div>
+                </div>
+
+                <div class="col-md-4">
+                    <div class="portfolio-thumbnail">
+                        <a href="UW_incoming.html">
+                            <figure class="img-hover">
+                                <img class="img-hover" src="img/incoming_crop.png" alt="" class="img-responsive"/></figure></a>
+                    </div>
+                </div>
+
             </div>
         </div>
+
 
         <br>
 
