--- a/maptiles.html
+++ b/maptiles.html
@@ -43,19 +43,24 @@
             <script type="text/javascript" src="js/bootstrap.min.js"></script>
         </header>
 
-        <div class="page-content">
-            <div class="wrapper">
-                <div class="container portfolio-page" style="width:auto;">
-                    <div class="row">
-                        <div class="col-md-12">
-                                <h1>The Walking Dead map tiles</h1>
-                                <p>One of my favorite TV shows is The Walking Dead. I this tileset to capture the aesthetic style of the show's opening credits from the yellow, dingy tint to the decay of the humans and the architecture post-zombie apocalypse. </p>
-                                <br>
-                                <p>
-                                    <img src="img/maptiles.gif" alt="walking dead"/>
-                                </p>
-                                <a href="/portfolio/">&larr; back to portfolio</a>
-                        </div>
+        <div class="container">
+            <div class="row header">
+                <div class="col-md-12 col-xs-12">
+                        <h1 class="page-header">The Walking Dead map tile</h1>
+                        <p>One of my favorite TV shows is The Walking Dead. I wanted this tileset to capture the aesthetic style of the show's opening credits from the yellow, dingy tint to the decay of the humans and the architecture post-zombie apocalypse. </p>
+                        <br>
+
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-md-12 col-xs-12">
+                    <div class="thumbnail portfolio-thumbnail">
+                        <img src="img/maptiles.gif" alt="walking dead"/>
                     </div>
                 </div>
             </div>
+            <a href="/portfolio/">&larr; back to portfolio</a>
+        </div>
+    </body>
+</html>
