image centering works... not

--- a/index.html
+++ b/index.html
@@ -70,6 +70,17 @@
               </div>
           </div>
       </div>
+ <br>
+      <div class="container">
+          <div class="row">
+              <div class="col-md-2 col-xs-12">
+                  <div class="thumbnail">
+                      <img class="responsive center-block" src="img/mini_metro.png" alt="mini metro"/>
+                  </div>
+              </div>
+          </div>
+      </div>
+
 
           <br>
 
