--- a/index.html
+++ b/index.html
@@ -56,40 +56,38 @@
               <div class="col-md-4 col-sm-6 col-xs-12">
                   <h2>Cartography</h2>
                   <p>As a highly visual learner and an educator, I've been facinated by a map's ability to convey a wealth of information in a concise manner. Cartographers are educators, scientists, and artists. I fully embrace the practice of weaving together science and art through geovisualization and beautiful design.</p>
-                  <!-- <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p> -->
+                  <!-- <p><a class="btn btn-default" href="#" role="button">See my work &raquo;</a></p> -->
               </div>
               <div class="col-md-4 col-sm-6 col-xs-12">
                   <h2>GIS</h2>
                   <p>You can't solve problems unless you are aware of and understand their history and complexities. I love how GIS can expose, evaluate, and solve complex issues. My professional goal is to help uncover social and environmental injustices and communicate them to wider audiences.  </p>
-                  <!-- <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p> -->
+                  <!-- <p><a class="btn btn-default" href="#" role="button">See my work &raquo;</a></p> -->
               </div>
               <div class="col-md-4 col-sm-6 col-xs-12">
                   <h2>Education</h2>
                   <p>Teaching will always be one of my passions. My 8 years in museum and classroom education have given me invaluable experiences that influence my work in cartography and GIS. I hope to continue to utilize my education background in my professional life. </p>
-                  <!-- <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p> -->
+                  <!-- <p><a class="btn btn-default" href="#" role="button">See my work &raquo;</a></p> -->
               </div>
           </div>
-      </div>
- <br>
-      <div class="container">
-          <div class="row">
-              <div class="col-md-2 col-xs-12">
-                  <div class="thumbnail">
-                      <img class="responsive center-block" src="img/mini_metro.png" alt="mini metro"/>
-                  </div>
-              </div>
-          </div>
+
       </div>
 
-
-          <br>
 
           <footer>
               <div class="jumbotron footer">
                   <div class="container">
-                      <h5><b>Shelley Witte</b></h5>
-                      <h5>email:  shelleywitte@gmail.com</h5>
-                      <h5>Twitter:  <a href="https://twitter.com/ohthatswitte">@ohthatswitte</h5>
+                      <div class="row">
+                          <div class="col-md-2">
+                              <div class="thumbnail">
+                                  <img class="responsive center-block" src="img/mini_metro.png" alt="mini metro"/>
+                              </div>
+                          </div>
+                          <div class="col-md-4">
+                              <h5><b>Shelley Witte</b></h5>
+                              <h5>email:  shelleywitte@gmail.com</h5>
+                              <h5>Twitter:  <a href="https://twitter.com/ohthatswitte">@ohthatswitte</h5>
+                          </div>
+                      </div>
                   </div>
               </div>
           </footer>
