--- a/work.html
+++ b/work.html
@@ -110,15 +110,24 @@
 
         <br>
 
-      <footer>
-          <div class="jumbotron footer">
-              <div class="container">
-                  <h5><b>Shelley Witte</b></h5>
-                  <h5>email:  shelleywitte@gmail.com</h5>
-                  <h5>Twitter:  <a href="https://twitter.com/ohthatswitte">@ohthatswitte</h5>
-              </div>
-          </div>
-      </footer>
+        <footer>
+            <div class="jumbotron footer">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-2">
+                            <div class="thumbnail">
+                                <img class="responsive center-block" src="img/mini_metro.png" alt="mini metro"/>
+                            </div>
+                        </div>
+                        <div class="col-md-4">
+                            <h5><b>Shelley Witte</b></h5>
+                            <h5>email:  shelleywitte@gmail.com</h5>
+                            <h5>Twitter:  <a href="https://twitter.com/ohthatswitte">@ohthatswitte</h5>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </footer>
 
   </body>
 
